--- a/src/Notifications.Service/App.config
+++ b/src/Notifications.Service/App.config
@@ -28,6 +28,8 @@
     <!-- Имя шаблона для письма с кнопкой. Поддерживаются переменные: title, content (+ text_content), button, button_link, button_text, content_after_button ( + text_content_after_button) -->
     <add key="ulearn.spam.templates.withButton" value="with_button" />
 
+	<!-- Канал в телеграме, куда отправлять информацию об ошибках -->
+	<add key="ulearn.telegram.errors.channel" value="" />  
   </appSettings>
   <startup>
 	<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7" />
@@ -37,6 +39,7 @@
 	  <level value="DEBUG" />
 	  <appender-ref ref="FileAppender" />
 	  <appender-ref ref="ConsoleAppender" />
+      <appender-ref ref="TelegramAppender" />  
 	</root>
 	<appender name="FileAppender" type="log4net.Appender.FileAppender">
 	  <file value="logs\\notifications.log" />
@@ -59,6 +62,19 @@
 		<conversionPattern value="%date [%thread] %-5level %logger — %message%newline" />
 	  </layout>
 	</appender>
+    
+    <!--
+    Для работы этого аппендера должны быть установлены переменные:
+        ulearn.telegram.botToken
+        ulearn.telegram.errors.channel 
+    -->  
+    <appender name="TelegramAppender" type="ulearn.Logging.TelegramAppender, uLearn">
+      <threshold value="Error" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %logger — %message%newline" />
+      </layout>
+    </appender>
+      
   </log4net>
   <entityFramework>
 	<defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
