--- a/src/Notifications.Service/packages.config
+++ b/src/Notifications.Service/packages.config
@@ -26,6 +26,7 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="System.Linq" version="4.3.0" targetFramework="net47" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net47" />
+  <package id="System.Net.Http" version="4.3.2" targetFramework="net47" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net47" />
   <package id="System.Reflection.Metadata" version="1.4.2" targetFramework="net47" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net47" />
