--- a/src/uLearn.Tests/uLearn.Tests.csproj
+++ b/src/uLearn.Tests/uLearn.Tests.csproj
@@ -223,6 +223,7 @@
     <Content Include="CSharp\IndentsValidation\TestData\Correct\IfOpenBraceGrandparentIsMultilineThenContentIndentedFromGrandparent.cs" />
     <Compile Include="CSharp\IndentsValidation\TestData\Correct\IfBracesNotOnSameLineBracesIndented.cs" />
     <Compile Include="CSharp\IndentsValidation\TestData\Correct\IfBracesNotOnSameLineFirstLevelTokensInsideBracesIndented.cs" />
+    <Compile Include="CSharp\IndentsValidation\TestData\Correct\NonBracesSyntaxStatementsWithoutIndentsErrorsShouldNotHaveValidationReports.cs" />
     <Compile Include="CSharp\IndentsValidation\TestData\Correct\SingleLineParameterListNotIndented.cs" />
     <Compile Include="CSharp\IndentsValidation\TestData\Correct\SingleLineExpressionStatementNotIndented.cs" />
     <Compile Include="CSharp\IndentsValidation\TestData\Correct\SingleLineArgumentListNotIndented.cs" />
@@ -246,7 +247,7 @@
     <Compile Include="CSharp\IndentsValidation\TestData\Incorrect\MultilineExpressionStatementShouldBeIndented.cs" />
     <Compile Include="CSharp\IndentsValidation\TestData\Correct\TabsMixedWithSpaces.cs" />
     <Content Include="CSharp\IndentsValidation\TestData\Incorrect\TopLevelNodesShouldBeConsistent.cs" />
-    <Compile Include="CSharp\IndentsValidation\TestData\Incorrect\SingleLineOperations.cs" />
+    <Compile Include="CSharp\IndentsValidation\TestData\Incorrect\NonBracesSyntaxStatementsWithIndentsErrorsShouldHaveValidationReports.cs" />
     <Compile Include="CSharp\LineLengthChecker_should.cs" />
     <Compile Include="CSharp\NamingChecker_should.cs" />
     <Content Include="CSharp\testProject\projDir\MeaningOfLifeTask.WrongAnswer.27.cs">
